<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/bg_top_header"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/ic_bg_topheader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="360dp"
        android:layout_height="487dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="14dp"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_top_header"
        app:layout_editor_absoluteX="0dp">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="#000000"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/reg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/clipboard"
                    android:contentDescription="@string/regstr" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mo_re"
                    android:text="@string/registration"
                    android:textColor="#FA000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="#ffff"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/live"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:background="@drawable/infabout"
                    android:contentDescription="@string/feedback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mo_re"
                    android:text="About"
                    android:textColor="#FA000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardColor"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/prev"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/questionspop"
                    android:contentDescription="@string/previous_questions" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mo_re"
                    android:text="Previous Questions"
                    android:textColor="#FA000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardColor"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/test"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/reviewonetwothree"
                    android:contentDescription="@string/testmonials" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mo_re"
                    android:text="@string/testmonials"
                    android:textColor="#FA000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardColor"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/faq"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/help"
                    android:contentDescription="@string/faqsss" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mo_re"
                    android:text="@string/faqs"
                    android:textColor="#FA000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardColor"
            app:cardBackgroundColor="#ffff"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/contact"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/sms"
                    android:contentDescription="@string/contact" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mo_re"
                    android:text="@string/str1"
                    android:textColor="#FA000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </GridLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="146dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="544dp"
        android:background="@drawable/giphy"
        android:src="@drawable/giphy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bg_top_header"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bg_top_header"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>